Add dependency on Monolog

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	"require": {
 		"php": ">=5.5-stable",
 		"oktopost/objection": "~1.0.0",
-		"oktopost/skeleton": "dev-master"
+		"oktopost/skeleton": "dev-master",
+		"monolog/monolog": "^1.19"
 	},
 	
 	"autoload": {
