Update composer file

--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,13 @@
 	"name": "oktopost/aquarium",
 	"type": "library",
 	"license": "MIT",
+	"homepage": "https://github.com/Oktopost/Skeleton",
+	
 	"authors": [
 		{
 			"name": "Alexey Puchkov",
-			"email": "alexey@oktopost.com"
+			"email": "alexey@oktopost.com",
+			"role": "Developer"
 		}
 	],
 	
