--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
 		}
 	],
 	
-	"minimum-stability": "RC",
+	"minimum-stability": "stable",
 	
 	"require": {
 		"php": ">=5.5-stable",
-		"oktopost/objection": "~1.0.0",
-		"oktopost/skeleton": "dev-master",
+		"oktopost/objection": "^1.0",
+		"oktopost/skeleton": "^1.0",
 		"psr/log": "^1.0"
 	},
 	
