--- a/js/GulpCompiler/package.json
+++ b/js/GulpCompiler/package.json
@@ -13,8 +13,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^4.0.0",
     "svn-info": "^0.2.1",
     "yargs": "4.4.0",
-    "gulp-util": "~3.0.7"
+    "gulp-util": "~3.0.7",
+    "handlebars": "^1.3.0",
+    "gulp-wrap": "^0.11.0"
   }
 }
